--- a/pages/Biochemistry-and-Molecular-Biology.html
+++ b/pages/Biochemistry-and-Molecular-Biology.html
@@ -42,7 +42,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Poppins", sans-serif}
             <p class="w3-text-grey"><b>• Biochemists</b></p> <!--Career List-->
             <p class="w3-text-grey"><b>• Biophysicists</b></p>
             <p class="w3-text-grey"><b>• Biological science teachers</b></p>
-            <p class="w3-text-grey"><b>• Medical laboratory technologist</b></p>
+            <p class="w3-text-grey"><b>• Medical laboratory technologists</b></p>
             <p class="w3-text-grey"><b>• Geneticists</b></p>
 
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-green"></i>Estimated Starting Salary:</b></p>
